tests/fsharp/core/auto-widen/preview/test.bsl

test.fsx(54,22,54,24): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(55,22,55,23): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(56,28,56,29): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(56,30,56,31): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(56,32,56,33): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(56,34,56,35): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(57,28,57,29): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(57,30,57,31): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(57,32,57,33): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(57,34,57,35): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(58,30,58,31): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float32'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(58,32,58,33): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float32'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(58,34,58,35): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float32'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(58,36,58,37): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float32'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(59,22,59,43): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(60,28,60,49): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(60,50,60,71): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(64,22,64,25): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(64,22,64,25): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(65,26,65,29): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(65,26,65,29): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(89,18,89,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(89,18,89,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(95,20,95,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(95,20,95,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(112,20,112,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(117,19,117,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(117,19,117,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(118,19,118,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(118,22,118,23): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(123,19,123,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'double'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(123,19,123,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'double'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(124,19,124,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'double'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(124,22,124,23): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'double'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(131,18,131,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'C'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(136,18,136,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(141,18,141,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'decimal'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(143,18,143,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'decimal'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(145,39,145,41): typecheck error FS3386: This expression uses an implicit conversion to convert type 'string' to type 'Xml.Linq.XNamespace'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(150,18,150,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'string' to type 'Xml.Linq.XNamespace'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(155,18,155,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'string' to type 'Xml.Linq.XName'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(161,18,161,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'C'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(168,18,168,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'Y' to type 'X'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(168,18,168,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'Y' to type 'X'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(174,20,174,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'C<int>'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(176,15,176,16): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'C<int>'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(182,27,182,28): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'Nullable<int>'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(184,15,184,16): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'Nullable<int>'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(284,7,284,22): typecheck error FS0001: This expression was expected to have type
    'unit'    
but here has type
    'obj'    

test.fsx(286,32,286,35): typecheck error FS0193: Type constraint mismatch. The type 
    'float'    
is not compatible with type
    'int'    

